# hf-agents-course

./: pyproject.toml
unit_2/smolagents/: code_exection.py  full_agent.py  multi_agents.py  using_tools.py  websearch.py
