[project]
name = "hf-agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "gradio>=5.16.0",
  "huggingface-hub>=0.28.1",
  "langchain-community>=0.3.18",
  "langchain>=0.3.19",
  "smolagents>=1.9.2",
  "rank-bm25>=0.2.2",
]
